# nyuctf-adapter

./: .gitignore  README.md  main.py  pyproject.toml  run_bench.yaml
src/nyu_ctf_adapter/: __init__.py  adapter.py  main.py
